# TIMEX

./: .gitignore  .gitmodules  ARPA-plot-results.py  ARPA-timeseriesContainerProphetSeasPers.pkl  ARPA.ipynb  CHANGELOG.md  Dockerfile  Procfile  README.md  TODO.md  app.py  app_beta.py  app_load_from_dump.py  app_load_from_dump_beta.py  build_docker_images.sh  children_for_each_scenario_beta.pkl  configuration_test.json  create_docs.sh  dependecies-update_command.sh  docker-compose.yml  index.py  ingestion_test.py  launch_locust.sh  locustfile.py  locustfile_fra.py  main_test.py  param_config_example.py  prediction_test.py  pyproject.toml  redpanda-ca.crt  requirements.txt  run_tests.py  setup.py  start_redpanda_test.py  testing.py  timex.py
.github/workflows/: run_tests.yml
Documents/: timexKubernetes.pptx
Documents/Diagrams/: Test1_plan.drawio  timexWorkFlow.drawio
Redpanda/: __init__.py  client_configs.json  client_configs_readme.txt  constants.py  instances.py  utils.py
TIMEX/: .gitignore  pyproject.toml
TIMEX/docs/: index.html
TIMEX/tests/: test_data_prediction.py
TIMEX/timexseries/: __init__.py  data_ingestion.py
assets/: custom.css
covid_italy/: app.py  app_beta.py  app_load_from_dump.py  app_load_from_dump_beta.py
covid_italy/configurations/: configuration_test_covid19italy.json  configuration_test_covid19italy_BAK.json  configuration_test_covid19italy_BETA.json
data_ingestion_server/: Dockerfile  pyproject.toml  server.py
data_ingestion_server/data_ingestion/: __init__.py  data_ingestion.py
data_prediction/: __init__.py  pipeline.py
data_prediction/models/: mockup_predictor.py  predictor.py  prophet_predictor.py
data_prediction_server/: Dockerfile  server.py
data_prediction_server/data_prediction/: __init__.py
data_prediction_server/historical_predictions/: historical_predictions_bitcoin.pkl  historical_predictions_swiss_covid_fbprophet.pkl
data_visualization/: __init__.py  functions.py
dataset_examples/BitCoin/: BitcoinPrice.csv  configBitCoin.json
dataset_examples/CovidTicino/: configCovidTicino.json  configCovidTicinoLSTM.json
dataset_examples/ElectricityLoad/: configElectricityLoad.json  loadingFunction.py
demo_configurations/: configuration_test_airlines.json  configuration_test_covid19italy.json  configuration_test_covid19italy_BETA.json  configuration_test_covid19italy_regions.json
dev_utils/: restart_env.sh
docker/: baseImage_dockerfile  gProfilerDaemonSet.yml  ingestion_dockerfile  prediction_dockerfile  setup_cluster.yaml  setup_minikube_cluster.yaml  validation_dockerfile
docker&kubernetes/: data_ingestion_deployment.yaml  dockerfile_example  manager_validator_deployment.yaml
docs/: index.html
docs/timex/: data_ingestion.html  index.html  timeseries_container.html
docs/timexseries/: data_ingestion.html  index.html  timeseries_container.html
entrypoints/benthos/: config.yaml  script.py
entrypoints/go/: go.mod  go.sum  watcher.go
entrypoints/watcher/: watcher.go
example_data/: config.json
examples/: BitcoinPriceForecasting.ipynb  Covid-19SwitzerlandTicinoForecasting.ipynb
historical_predictions/: historical_predictions_bitcoin.pkl  historical_predictions_bitcoin_arima.pkl  historical_predictions_bitcoin_fbprophet.pkl  historical_predictions_swiss_covid_fbprophet.pkl
kubernetes/: ManagerValidator-deployment.yaml  ManagerValidatorIngestion-deployment.yaml  TimexApp-deployment.yaml  aws-ingress.yaml  dataIngestion-deployment.yaml  predictor-deployment.yaml  predictor_deployment.yaml  yaml_manager.sh
minikube/: build_images.sh  ingestion.yaml  prediction.yaml
modules/: ingestion.py  ingestion_instance.py  ingestion_module.py  job_producer.py  prediction.py  prediction_instance.py  prediction_module.py  produce_job.py  spawn_instances.py  validation.py  validation_functions.py  validation_module.py
old_kubernetes/: build_docker_images.sh  timex_app_deployment.yaml
orchestrator/: server.py
prediction_server/: Dockerfile  building_command.sh  pipeline.py  pyproject.toml  server.py
prediction_server/models/: arima_predictor.py  exponentialsmoothing_predictor.py  lstm_predictor.py  mockup_predictor.py  prophet_predictor.py
predictor/: server.py
redpanda_modules/: constants.py  instances.py  utils.py
src/: configuration_test.json  configuration_test_airlines.json  configuration_test_covid19.json  configuration_test_covid19italy.json  configuration_test_covid19switzerland.json  configuration_test_daily_min_temperatures.json  main_test.py  timex.py
tests/: __init__.py  constants.py  consumer.py  context.py  ingestion_instance.py  ingestion_test.py  launch_tests.sh  plotResults.ipynb  prediction_instance.py  prediction_test.py  produce_job.py  read_stats_from_locust.sh  run_tests.py  spawn_instances.py  test_data_ingestion.py  test_data_prediction.py  test_data_preparation.py  test_data_visualization.py  test_utils.py  utilities.py  validation_instance.py  validation_test.py
timex/: configuration_test_covid19italy.json  data_ingestion.py  documentation.md  main_test.py  scenario.py  timeseries_container.py
timex_app/: Dockerfile  pyproject.toml  server.py
timex_app/data_prediction/: __init__.py  pipeline.py  predictor.py
timex_app/data_prediction/models/: arima_predictor.py  exponentialsmoothing_predictor.py
timex_app/data_visualization/: functions.py
timex_manager/: Dockerfile  ReadMe.md  pyproject.toml  server.py  timex_manager.py
timexseries/: __init__.py  data_ingestion.py  documentation.md  timeseries_container.py
utils/: Consumer_instance.py  Dockerfile  File.py  Producer_instance.py  __init__.py  predictor.py  pyproject.toml  redpanda_instances.py  redpanda_tools.py  redpanda_utils.py  timeseries_container.py  validation_performances.py  worker_jobs.py
validation_server/: Dockerfile  diego.pkl  pyproject.toml  server.py  test_vali_results.json  vali_func_test.py  validation_functions.py
validation_server/data_prediction/: __init__.py  add_regressor.py
validation_server/data_prediction/models/: arima_predictor.py  lstm_predictor.py  prophet_predictor.py
(+201 files in other folders)
