[tool.poetry]
name = "timexdocker"
version = "0.1.0"
description = ""
authors = ["FPuoti255 <fpuoti99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
confluent-kafka = "^1.9.2"
timexseries = {path = "TIMEX"}
psutil = "^5.9.4"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
