[tool.poetry]
name = "timexseries"
version = "1.2.3"
description = "TIMEX is a framework for time-series-forecasting-as-a-service."
authors = ["Alessandro Falcetta <alessandro.falcetta@polimi.it>", "Manuel Roveri <manuel.roveri@polimi.it>"]
license = "Apache-2.0"

readme = "README.md"

repository = "https://github.com/AlexMV12/TIMEX"
homepage = "https://alexmv12.github.io/TIMEX/"

keywords = ["time-series", "time", "forecasting", "as-a-service"]

classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.group.data_visualization]
optional = true
[tool.poetry.group.data_prediction]
optional = true


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dateparser = "^1.1.0"
gunicorn = "^20.1.0"
pandas = "^1.5.0"



[tool.poetry.group.data_visualization.dependencies]
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.3"
colorhash = "^1.0.4"
networkx = "^2.6.3"
statsmodels = "^0.13.1"


[tool.poetry.group.data_prediction.dependencies]
torch = "^1.10.1"
scipy = "^1.7.3"
statsmodels = "^0.13.1"
prophet = "^1.0.1"
statsforecast = "^1.0.0"
sklearn = "^0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage-badge = "^1.0.1"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.2.*"]
build-backend = "poetry.core.masonry.api"
