[tool.poetry]
name = "timexseries"
version = "1.2.3"
description = "TIMEX is a framework for time-series-forecasting-as-a-service."
authors = ["Alessandro Falcetta <alessandro.falcetta@polimi.it>", "Manuel Roveri <manuel.roveri@polimi.it>"]
license = "Apache-2.0"

readme = "README.md"

repository = "https://github.com/AlexMV12/TIMEX"
homepage = "https://alexmv12.github.io/TIMEX/"

keywords = ["time-series", "time", "forecasting", "as-a-service"]

classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dateparser = "^1.1.0"
gunicorn = "^20.1.0"
pandas = "^1.5.0"
joblib = "^1.2.0"
holidays = "0.24"
numpy = "1.23.5"

scipy = { version = ">=1.10.1", optional = true}
dash = { version = ">=2.0.0", optional = true}
dash-bootstrap-components = { version = ">=1.0.3", optional = true}
colorhash = { version = ">=1.0.4", optional = true}
networkx = { version = ">=2.6.3", optional = true}
statsforecast = { version = ">=1.0.0", optional = true}
scikit-learn = { version = ">=1.2.1", optional = true}
statsmodels = { version = ">=0.13.1", optional = true}
prophet = { version = "1.1.1", optional = true}


[tool.poetry.extras]
data_prediction = ["prophet", "scipy", "statsmodels", "statsforecast", "scikit-learn"]
data_visualization = ["dash", "dash-bootstrap-components", "colorhash", "networkx", "statsmodels"]


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage-badge = "^1.0.1"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
