[tool.poetry]
name = "Data_ingestion_server"
version = "0.1.0"
description = ""
authors = ["Francesco Puoti"]

[tool.poetry.dependencies]
python = "3.9.*"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
dateparser = "^1.1.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
