[tool.poetry]
name = "Prediction server"
version = "0.1.0"
description = "Prediction module for the timex app"
authors = ["Francesco Puoti"]

[tool.poetry.dependencies]
python = "3.9.*"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
dateparser = "^1.1.0"
pandas = "^1.4.1"
pmdarima = "^1.8.5"
sklearn = "^0.0"
statsmodels = "^0.13.2"
torch = "^1.10.2"
prophet = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
