[tool.poetry]
name = "timexseries"
version = "0.1.0"
description = "Dockerization of the Timex app for machine learning time series forecasting as a service"
authors = ["FPuoti255 <fpuoti99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.19.0"
torch = "^1.7.0"
dash-bootstrap-components = "^0.11.3"
gunicorn = "^20.0.4"
colorhash = "^1.0.3"
dateparser = "^1.0.0"
scipy = "^1.6.0"
sklearn = "^0.0"
statsmodels = "^0.12.2"
networkx = "^2.5"
prophet = "^1.0.1"
pmdarima = "^1.8.2"
autopep8 = "^1.6.0"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage-badge = "^1.0.1"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
