[tool.poetry]
name = "timex_app"
version = "0.1.0"
description = "web application for Timex"
authors = ["Francesco Puoti"]

[tool.poetry.dependencies]
python = "3.9.*"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
dash = "^2.2.0"
pandas = "^1.4.1"
plotly = "^5.6.0"
dash-bootstrap-components = "^1.0.3"
networkx = "^2.7.1"
colorhash = "^1.0.4"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
