[tool.poetry]
name = "timex_manager"
version = "0.1.0"
description = "requests and modules manager for the timex app"
authors = ["Francesco Puoti"]

[tool.poetry.dependencies]
python = "3.9.*"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
