[tool.poetry]
name = "timex_utils"
version = "0.1.0"
description = "A set of functions shared among some of the Timex modules. Since all the modules will be dockerized, it is useful to build an image containing just this folder. In fact, the utils_image will represent the parent image for all those modules using its functions"
authors = ["Francesco Puoti"]

[tool.poetry.dependencies]
python = "3.9.*"
dateparser = "^1.1.0"
pandas = "^1.4.1"
joblib = "^1.1.0"
numpy = "^1.22.3"
scipy = "^1.8.0"
sklearn = "^0.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
