[tool.poetry]
name = "timex_validation_server"
version = "0.1.0"
description = "In file are listed only the dependencies needed in addition to those already present in the utils module"
authors = ["Francesco Puoti"]

[tool.poetry.dependencies]
python = "3.9.*"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
DateTime = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
